src/bin/rsp/tui/screens/snapshots/rsp__tui__screens__game_detail__tests__render_detail_full.snap
---
source: src/bin/rsp/tui/screens/game_detail.rs
assertion_line: 878
expression: terminal.backend()
snapshot_kind: text
---
"╭ ♠ Game Info ─────────╮╭ ♥ Players ───────────────────────────────────────────╮"
"│ Site     PokerStars  ││ Seat  Name       Start   End     Change   Cards      │"
"│ Table    Main (6-max ││                                                      │"
"│ Game     Hold'em     ││ 1     Alice Ⓓ    100     105     +5.0     As Ks      │"
"│ Limit    No Limit    ││ 2     Bob        100     94      -6.0                │"
"│ Blinds   1 / 2       ││ 3     Charlie    100     100     0.0                 │"
"│ Date     —           ││                                                      │"
"│ Game #   12345       ││                                                      │"
"│ Dealer   Seat 1      ││                                                      │"
"╰──────────────────────╯╰──────────────────────────────────────────────────────╯"
"╭ ♣ Round Log ─────────────────────────────────────────────────────────────────╮"
"│ ── Preflop ──                                                                │"
"│   Alice posts SB 1  (pot: 1)                                                 │"
"│   Bob posts BB 2  (pot: 3)                                                   │"
"│   Charlie folds                                                              │"
"│   Alice raises to 6  (pot: 9)                                                │"
"│   Bob calls 4 to 6  (pot: 13)                                                │"
"│                                                                              │"
"│ ── Flop ── [Th Jh Qh]                                                        │"
"│   Alice bets 8  (pot: 21)                                                    │"
"│   Bob folds                                                                  │"
"│                                                                              │"
"│ ── ★ Awards ──                                                               │"
"│   Main pot (20)                                                              │"
"│     Alice wins 20                                                            │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"q Back  j/k Scroll  ^d/^u ½Page  g Top  G End                                   "
