src/bin/rsp/tui/screens/snapshots/rsp__tui__screens__game_detail__tests__render_detail_scrolled.snap
---
source: src/bin/rsp/tui/screens/game_detail.rs
expression: terminal.backend()
---
"╭ ♠ Game Info ─────────╮╭ ♥ Players ───────────────────────────────────────────╮"
"│ Site     PokerStars  ││ Seat  Name            Stack    Profit   Cards        │"
"│ Table    Main (6-max ││                                                      │"
"│ Game     Hold'em     ││ 1     Alice Ⓓ         100      +5.0     As Ks        │"
"│ Limit    No Limit    ││ 2     Bob             100      -6.0                  │"
"│ Blinds   1 / 2       ││ 3     Charlie         100      0.0                   │"
"│ Date     —           ││                                                      │"
"│ Game #   12345       ││                                                      │"
"│ Dealer   Seat 1      ││                                                      │"
"╰──────────────────────╯╰──────────────────────────────────────────────────────╯"
"╭ ♣ Round Log ─────────────────────────────────────────────────────────────────╮"
"│   Bob calls 4  (pot: 13)                                                     │"
"│                                                                              │"
"│ ── Flop ── [Th Jh Qh]                                                        │"
"│   Alice bets 8  (pot: 21)                                                    │"
"│   Bob folds                                                                  │"
"│                                                                              │"
"│ ── ★ Awards ──                                                               │"
"│   Alice wins 20                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"q Back  j/k Scroll  ^d/^u ½Page  g Top  G End                                   "
