src/bin/rsp/tui/screens/snapshots/rsp__tui__screens__game_detail__tests__render_detail_side_pots.snap
---
source: src/bin/rsp/tui/screens/game_detail.rs
assertion_line: 845
expression: terminal.backend()
snapshot_kind: text
---
"╭ ♠ Game Info ─────────╮╭ ♥ Players ───────────────────────────────────────────╮"
"│ Site     PokerStars  ││ Seat  Name       Start   End     Change   Cards      │"
"│ Table    Main (6-max ││                                                      │"
"│ Game     Hold'em     ││ 1     Alice      50      150     +100.0   Ah Kh      │"
"│ Limit    No Limit    ││ 2     Bob        200     206     +6.0     Qs Qd      │"
"│ Blinds   1 / 2       ││ 3     Charlie Ⓓ  200     94      -106.0   2s 2d      │"
"│ Date     —           ││                                                      │"
"│ Game #   67890       ││                                                      │"
"│ Dealer   Seat 3      ││                                                      │"
"╰──────────────────────╯╰──────────────────────────────────────────────────────╯"
"╭ ♣ Round Log ─────────────────────────────────────────────────────────────────╮"
"│ ── Preflop ──                                                                │"
"│   Alice posts SB 1  (pot: 1)                                                 │"
"│   Bob posts BB 2  (pot: 3)                                                   │"
"│   Charlie raises to 6  (pot: 9)                                              │"
"│   Alice calls 5 to 6  (pot: 14)                                              │"
"│   Bob calls 4 to 6  (pot: 18)                                                │"
"│                                                                              │"
"│ ── Flop ── [Th Jh Qh]                                                        │"
"│   Alice bets 44 [ALL-IN]  (pot: 62)                                          │"
"│   Bob raises to 100  (pot: 162)                                              │"
"│   Charlie calls 100 to 100  (pot: 262)                                       │"
"│                                                                              │"
"│ ── Turn ── [2c]                                                              │"
"│                                                                              │"
"│ ── River ── [5d]                                                             │"
"│   Alice shows Ah Kh | Th Jh Qh 2c 5d (Straight Flush)                        │"
"│   Bob shows Qs Qd | Th Jh Qh 2c 5d (Three of a Kind)                         │"
"│   Charlie shows 2s 2d | Th Jh Qh 2c 5d (Three of a Kind)                     │"
"│                                                                              │"
"│ ── ★ Awards ──                                                               │"
"│   Main pot (150)                                                             │"
"│     Alice wins 150                                                           │"
"│   Side pot 1 (112)                                                           │"
"│     Bob wins 112                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"q Back  j/k Scroll  ^d/^u ½Page  g Top  G End                                   "
